Fixes #4165 - KB answer image in editor has extra padding

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -2275,6 +2275,7 @@ input.time.time--12 {
   opacity: 1;
   background: hsl(210, 17%, 93%);
   border-color: hsl(210, 10%, 85%);
+  padding: unset;
 
   &:focus,
   &.focus {
